--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>
     <div id="root"></div>
 
+    <!-- Firebase SDK Setup -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-        import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut, signInWithCustomToken, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+        import { getAuth, onAuthStateChanged, signInWithCustomToken, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, collection, onSnapshot, query, addDoc, deleteDoc, updateDoc, where, getDocs } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 
         const firebaseConfig = JSON.parse(__firebase_config);
@@ -30,7 +31,29 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        window.fb = { auth, db, providers: { google: new GoogleAuthProvider() }, methods: { signInWithPopup, signOut, onAuthStateChanged, collection, query, onSnapshot, doc, setDoc, addDoc, deleteDoc, updateDoc, where, getDocs, signInWithCustomToken, signInAnonymously } };
+        // Global bridge for React
+        window.fb = { 
+            auth, 
+            db, 
+            methods: { 
+                onAuthStateChanged, 
+                collection, 
+                query, 
+                onSnapshot, 
+                doc, 
+                setDoc, 
+                addDoc, 
+                deleteDoc, 
+                updateDoc, 
+                where, 
+                getDocs, 
+                signInWithCustomToken, 
+                signInAnonymously 
+            } 
+        };
+
+        // Notify that Firebase is ready
+        window.dispatchEvent(new Event('firebase-ready'));
     </script>
 
     <script type="text/babel">
@@ -38,6 +61,7 @@
 
         const App = () => {
             const [user, setUser] = useState(null);
+            const [fbReady, setFbReady] = useState(!!window.fb);
             const [activeTab, setActiveTab] = useState('dashboard');
             const [classes, setClasses] = useState([]);
             const [students, setStudents] = useState([]);
@@ -45,23 +69,39 @@
             const [loading, setLoading] = useState(true);
             const appId = typeof __app_id !== 'undefined' ? __app_id : 'eraport-app';
 
+            // Wait for Firebase to be globally available
             useEffect(() => {
-                const initAuth = async () => {
-                    if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
-                        await window.fb.methods.signInWithCustomToken(window.fb.auth, __initial_auth_token);
-                    } else {
-                        await window.fb.methods.signInAnonymously(window.fb.auth);
-                    }
-                };
-                initAuth();
-                return window.fb.methods.onAuthStateChanged(window.fb.auth, (u) => {
-                    setUser(u);
-                    setLoading(false);
-                });
+                const handleFbReady = () => setFbReady(true);
+                window.addEventListener('firebase-ready', handleFbReady);
+                return () => window.removeEventListener('firebase-ready', handleFbReady);
             }, []);
 
             useEffect(() => {
-                if (!user) return;
+                if (!fbReady) return;
+
+                const initAuth = async () => {
+                    try {
+                        if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
+                            await window.fb.methods.signInWithCustomToken(window.fb.auth, __initial_auth_token);
+                        } else {
+                            await window.fb.methods.signInAnonymously(window.fb.auth);
+                        }
+                    } catch (err) {
+                        console.error("Auth error:", err);
+                    }
+                };
+
+                initAuth();
+                const unsubscribe = window.fb.methods.onAuthStateChanged(window.fb.auth, (u) => {
+                    setUser(u);
+                    setLoading(false);
+                });
+                return () => unsubscribe();
+            }, [fbReady]);
+
+            useEffect(() => {
+                if (!user || !fbReady) return;
+
                 const unsubClasses = window.fb.methods.onSnapshot(
                     window.fb.methods.collection(window.fb.db, 'artifacts', appId, 'users', user.uid, 'classes'),
                     (snap) => setClasses(snap.docs.map(d => ({ id: d.id, ...d.data() }))),
@@ -78,9 +118,14 @@
                     (err) => console.error(err)
                 );
                 return () => { unsubClasses(); unsubStudents(); unsubScores(); };
-            }, [user]);
+            }, [user, fbReady]);
 
-            if (loading) return <div className="h-screen flex items-center justify-center">Memuat...</div>;
+            if (loading) return (
+                <div className="h-screen flex flex-col items-center justify-center gap-4">
+                    <div className="w-12 h-12 border-4 border-blue-600 border-t-transparent rounded-full animate-spin"></div>
+                    <p className="text-gray-500 font-medium tracking-wide">Menyiapkan Aplikasi...</p>
+                </div>
+            );
 
             return (
                 <div className="flex min-h-screen">
@@ -103,7 +148,7 @@
                             ))}
                         </nav>
                         <div className="pt-6 border-t border-gray-100 text-xs text-gray-400">
-                            User ID: {user.uid}
+                            User ID: {user?.uid || 'Guest'}
                         </div>
                     </aside>
 
@@ -168,27 +213,25 @@
                     <h1 className="text-3xl font-extrabold text-gray-900">Input Data Siswa</h1>
 
                     <div className="grid grid-cols-1 md:grid-cols-2 gap-8">
-                        {/* Panel Input Kelas */}
-                        <div className="glass-card p-8 rounded-[2rem] space-y-6">
+                        <div className="glass-card p-8 rounded-[2rem] space-y-6 text-gray-800">
                             <div className="flex items-center gap-3">
                                 <div className="w-10 h-10 bg-blue-50 text-blue-600 rounded-xl flex items-center justify-center"><i data-lucide="grid"></i></div>
                                 <h3 className="text-xl font-bold">Data Kelas</h3>
                             </div>
                             <div className="flex gap-2">
-                                <input value={newClass} onChange={e => setNewClass(e.target.value)} className="flex-1 bg-white border border-gray-200 p-4 rounded-xl outline-none focus:ring-2 focus:ring-blue-500" placeholder="Nama Kelas (Misal: 10 IPA 1)" />
+                                <input value={newClass} onChange={e => setNewClass(e.target.value)} className="flex-1 bg-white border border-gray-200 p-4 rounded-xl outline-none focus:ring-2 focus:ring-blue-500" placeholder="Nama Kelas" />
                                 <button onClick={addClass} className="bg-blue-600 text-white px-6 rounded-xl font-bold hover:bg-blue-700 transition-all">Tambah</button>
                             </div>
                             <div className="grid grid-cols-1 gap-2 max-h-60 overflow-y-auto pr-2">
                                 {classes.map(c => (
-                                    <div key={c.id} className="p-4 bg-gray-50 rounded-xl flex justify-between items-center group border border-transparent hover:border-blue-100 transition-all">
-                                        <span className="font-semibold text-gray-700">{c.name}</span>
-                                        <button onClick={() => window.fb.methods.deleteDoc(window.fb.methods.doc(window.fb.db, 'artifacts', appId, 'users', user.uid, 'classes', c.id))} className="text-gray-300 hover:text-red-500 transition-colors"><i data-lucide="trash-2" className="w-4 h-4"></i></button>
+                                    <div key={c.id} className="p-4 bg-gray-50 rounded-xl flex justify-between items-center border border-transparent hover:border-blue-100 transition-all">
+                                        <span className="font-semibold">{c.name}</span>
+                                        <button onClick={() => window.fb.methods.deleteDoc(window.fb.methods.doc(window.fb.db, 'artifacts', appId, 'users', user.uid, 'classes', c.id))} className="text-gray-300 hover:text-red-500"><i data-lucide="trash-2" className="w-4 h-4"></i></button>
                                     </div>
                                 ))}
                             </div>
                         </div>
 
-                        {/* Panel Input Siswa */}
                         <div className="glass-card p-8 rounded-[2rem] space-y-6">
                             <div className="flex items-center gap-3">
                                 <div className="w-10 h-10 bg-emerald-50 text-emerald-600 rounded-xl flex items-center justify-center"><i data-lucide="user-plus"></i></div>
@@ -205,14 +248,11 @@
                         </div>
                     </div>
 
-                    {/* Daftar Siswa */}
                     <div className="glass-card p-8 rounded-[2.5rem] space-y-6">
-                        <div className="flex justify-between items-center">
-                            <h3 className="text-xl font-bold">Daftar Seluruh Siswa ({students.length})</h3>
-                        </div>
+                        <h3 className="text-xl font-bold">Daftar Seluruh Siswa ({students.length})</h3>
                         <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
                             {students.map(s => (
-                                <div key={s.id} className="p-4 bg-white border border-gray-100 rounded-2xl flex justify-between items-center shadow-sm hover:shadow-md transition-all">
+                                <div key={s.id} className="p-4 bg-white border border-gray-100 rounded-2xl flex justify-between items-center shadow-sm">
                                     <div className="overflow-hidden">
                                         <p className="font-bold text-gray-800 truncate">{s.name}</p>
                                         <p className="text-[10px] text-blue-600 font-black uppercase tracking-tighter">{classes.find(c => c.id === s.classId)?.name || 'Tanpa Kelas'}</p>
@@ -276,12 +316,12 @@
                         </div>
                         <div className="space-y-2">
                             <label className="text-xs font-bold text-gray-400 uppercase tracking-widest">Tipe Pertemuan</label>
-                            <input value={meetingName} onChange={e => setMeetingName(e.target.value)} placeholder="Misal: Tugas 1 / UH 1" className="w-full bg-gray-50 border-none p-4 rounded-xl outline-none focus:ring-2 focus:ring-blue-500 font-bold" />
+                            <input value={meetingName} onChange={e => setMeetingName(e.target.value)} placeholder="Misal: UH 1" className="w-full bg-gray-50 border-none p-4 rounded-xl outline-none focus:ring-2 focus:ring-blue-500 font-bold" />
                         </div>
                     </div>
 
                     {selClass && (
-                        <div className="glass-card rounded-[2rem] overflow-hidden shadow-xl border border-blue-50">
+                        <div className="glass-card rounded-[2rem] overflow-hidden shadow-xl">
                             <table className="w-full text-left">
                                 <thead className="bg-gray-900 text-white">
                                     <tr>
@@ -290,19 +330,19 @@
                                     </tr>
                                 </thead>
                                 <tbody className="divide-y divide-gray-100">
-                                    <tr className="bg-blue-50/50 border-b-2 border-blue-100">
+                                    <tr className="bg-blue-50/30">
                                         <td className="p-5 font-black text-blue-600 text-[10px] italic flex items-center gap-2">
-                                            <i data-lucide="zap" className="w-3 h-3"></i> INPUT MASSAL (BULK)
+                                            <i data-lucide="zap" className="w-3 h-3"></i> INPUT MASSAL
                                         </td>
                                         <td className="p-5">
-                                            <input value={bulkVal} onChange={e => handleBulk(e.target.value)} type="number" className="w-full p-3 rounded-lg border-2 border-blue-300 text-center font-bold focus:ring-0" placeholder="Set semua..." />
+                                            <input value={bulkVal} onChange={e => handleBulk(e.target.value)} type="number" className="w-full p-3 rounded-lg border-2 border-blue-300 text-center font-bold" placeholder="Set semua..." />
                                         </td>
                                     </tr>
                                     {filteredStudents.map(s => (
-                                        <tr key={s.id} className="hover:bg-gray-50/50 transition-colors">
+                                        <tr key={s.id}>
                                             <td className="p-5 font-bold text-gray-700">{s.name}</td>
                                             <td className="p-5">
-                                                <input value={inputData[s.id] || ''} onChange={e => setInputData({...inputData, [s.id]: parseFloat(e.target.value)||0})} type="number" className="w-full p-3 rounded-lg bg-white border border-gray-200 text-center font-bold focus:border-blue-500 outline-none" placeholder="0" />
+                                                <input value={inputData[s.id] || ''} onChange={e => setInputData({...inputData, [s.id]: parseFloat(e.target.value)||0})} type="number" className="w-full p-3 rounded-lg border border-gray-200 text-center font-bold focus:border-blue-500 outline-none" placeholder="0" />
                                             </td>
                                         </tr>
                                     ))}
@@ -310,7 +350,7 @@
                             </table>
                             <div className="p-8 bg-gray-50/50">
                                 <button onClick={saveAll} className="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-lg hover:bg-blue-700 transition-all flex items-center justify-center gap-3">
-                                    <i data-lucide="save"></i> Simpan Seluruh Penilaian
+                                    <i data-lucide="save"></i> Simpan Nilai
                                 </button>
                             </div>
                         </div>
@@ -324,8 +364,6 @@
 
             useEffect(() => { window.lucide && window.lucide.createIcons(); }, []);
 
-            const getFinalScore = (s) => (s.kog * 0.4 + s.psi * 0.3 + s.afe * 0.3).toFixed(2);
-
             const exportData = () => {
                 const meetingTypes = Array.from(new Set(scores.map(s => s.meeting)));
                 const rows = students
@@ -334,32 +372,29 @@
                         const res = { "Nama Siswa": student.name };
                         meetingTypes.forEach(type => {
                             const score = scores.find(sc => sc.studentId === student.id && sc.meeting === type);
-                            res[type] = score ? getFinalScore(score) : "-";
+                            res[type] = score ? score.kog : "-";
                         });
                         return res;
                     });
                 
-                if (rows.length === 0) return alert('Tidak ada data untuk diekspor!');
+                if (rows.length === 0) return alert('Tidak ada data!');
 
                 const ws = XLSX.utils.json_to_sheet(rows);
                 const wb = XLSX.utils.book_new();
-                XLSX.utils.book_append_sheet(wb, ws, "Hasil Akhir");
-                XLSX.writeFile(wb, "Rekap_Nilai_Siswa.xlsx");
+                XLSX.utils.book_append_sheet(wb, ws, "Rekap");
+                XLSX.writeFile(wb, "Rekap_Nilai.xlsx");
             };
 
             return (
                 <div className="space-y-8 animate-in slide-in-from-bottom-4">
                     <div className="glass-card p-10 rounded-[2.5rem] text-center space-y-6">
                         <div className="w-20 h-20 bg-emerald-100 text-emerald-600 rounded-3xl flex items-center justify-center mx-auto shadow-inner"><i data-lucide="file-spreadsheet" className="w-10 h-10"></i></div>
-                        <div className="max-w-md mx-auto">
-                            <h2 className="text-2xl font-black">Ekspor Hasil Nilai</h2>
-                            <p className="text-gray-400 mt-2">Format: Nama Siswa dan Nilai Akhir dari setiap tipe pertemuan yang pernah diinput.</p>
-                        </div>
+                        <h2 className="text-2xl font-black">Ekspor Hasil Nilai</h2>
                         <div className="flex flex-col items-center gap-4 pt-4">
-                            <select value={selClass} onChange={e => setSelClass(e.target.value)} className="w-full max-w-xs bg-gray-50 p-4 rounded-xl border border-gray-100 font-bold outline-none focus:ring-2 focus:ring-emerald-500">
+                            <select value={selClass} onChange={e => setSelClass(e.target.value)} className="w-full max-w-xs bg-gray-50 p-4 rounded-xl border border-gray-100 font-bold">
                                 <option value="">Semua Kelas</option>{classes.map(c => <option key={c.id} value={c.id}>{c.name}</option>)}</select>
                             <button onClick={exportData} className="bg-emerald-600 text-white px-10 py-4 rounded-2xl font-bold shadow-xl hover:bg-emerald-700 transition-all flex items-center gap-3">
-                                <i data-lucide="download"></i> Download Rekap Excel
+                                <i data-lucide="download"></i> Download Excel
                             </button>
                         </div>
                     </div>
